# routing-cycle-detector

./: .gitignore  CLAUDE.md  README.md  build.py  explanation.txt  generate_synthetic_cycles.py  my_solution.py  my_solution_benchmark_gil.py  pyproject.toml  solution.txt  task.md
diagrams/: Bucket Analysis Details.md  End-to-End Pipeline.md  Phase 1 Partition input.md  Phase 2 Parallel Analysis.md  Sequence Diagram.md
src/: __init__.py  graph.py  main.py  partition.py  reader.py  scheduler.py
src/routing_cycle_detector/: __init__.py  __main__.py  benchmark.py  cli.py  partition.py  scheduler.py
src/routing_cycle_detector/graph/: __init__.py  build.py  cycle.py  parse.py  process_bucket.py  types.py
src/routing_cycle_detector/partition/: __init__.py  cache.py  partition.py  types.py
src/routing_cycle_detector/solver/: __init__.py  execution.py  solve.py
tests/: test_graph.py  test_partition.py  test_reader.py
tests/graph/: test_build.py  test_parse.py  test_process_bucket.py
tests/partition/: test_partition.py
tests/solver/: test_execution.py
