[project]
name = "routing-cycle-detector"
version = "0.1.0"
description = "CLI tool to find the longest cycle in routing claims data"
readme = "README.md"
requires-python = ">=3.11"
# Zero runtime dependencies - stdlib only
dependencies = []

[project.optional-dependencies]
benchmark = ["psutil"]

[project.scripts]
routing-cycle-detector = "routing_cycle_detector.cli:main"
routing-cycle-detector-benchmark = "routing_cycle_detector.benchmark:main"

[dependency-groups]
dev = [
    "ruff>=0.9",
    "pytest>=8.0",
    "mypy>=1.14",
    "pre-commit>=4.0",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
